# stackoverflow

./: CMakeLists.txt  executable.cpp  shared.cpp  shared.h  static.cpp  static.h  transitive.cpp  transitive.h
